se avanza hasta casi terminar la leccion 24

--- a/react-udemy/src/Components/css/cardElements.css
+++ b/react-udemy/src/Components/css/cardElements.css
@@ -201,3 +201,13 @@ hr{
 .spacer-15{
     height: 15px;
 }
+
+.big-card{
+    /*border: 2px solid black;*/
+    border-radius: 10px;
+    width: auto;
+    padding: 3% 5%;
+    height: auto;
+    background-color: #ebf0fc;
+    margin: 5px;    
+}
