--- a/react-udemy/src/Components/css/cardElements.css
+++ b/react-udemy/src/Components/css/cardElements.css
@@ -214,7 +214,7 @@ hr{
 
 .pokedex-card{
     background-color: #e2072f;
-    width: 20%;
+    width: 25%;
     height: auto;
     padding: 10px 10px 40px 10px;
     margin: 5px;
@@ -333,7 +333,43 @@ hr{
 }
 
 .pokemon-name-title{
-    margin: 20px 10px;
-    border-bottom: 4px black solid;
+    margin: 20px 10px 0px 20px;
+    /* border-bottom: 4px black solid; */
     font-size: 150%;
+    text-align: center;
+}
+
+.pokemon-type-icon{
+    width: 40%;
+}
+
+.pokemon-types{
+    text-align: center;
+    margin-bottom: 10%;
+}
+
+@font-face {
+    font-family: calculator;
+    src: url(Calculator.ttf);
+}
+
+.search-pokemon{
+    text-align: center;
+    background-color: #255c32;
+    height: 10%;
+    padding: 10px;
+    width: fit-content;
+}
+.search-pokemon-txt, .search-pokemon-txt:hover{
+    background-color: #255c32;
+    text-align: center;
+    height: 90%;
+    width:auto;
+    font-size: 20px;
+    font-family: calculator;
+    border: 0px;
+}
+.search-pokemon-txt:focus{
+    border: 0px;
+    outline:none;
 }
