--- a/react-udemy/src/Components/css/cardElements.css
+++ b/react-udemy/src/Components/css/cardElements.css
@@ -410,3 +410,31 @@ tbody.users-data tr:hover{
 /* .users-name-row:hover, .users-email-row:hover{
     background-color: transparent;
 } */
+
+.estiloLink{
+    background-color: green;
+}
+
+.navbar-list{
+    width: calc(150% + 3px);
+    background-color: #39739d;
+    margin-left: -40%;
+    display: inline-block;
+    list-style: none;
+    text-align: center;
+    height: 10%;
+}
+
+.navbar-list li{
+    /* display: inline-block; */
+    float: left;
+    margin: 0;
+    text-align: center;
+    padding: 5% 5% 0px 10%;
+    position: relative;
+    /* width: 0.1px; */
+}
+
+.navbar-list li:hover{
+    background-color: cadetblue;
+}
